--- a/examples/axum/Cargo.toml
+++ b/examples/axum/Cargo.toml
@@ -10,6 +10,11 @@ anyhow = { version = "1.0.70", features = ["backtrace"] }
 axum = "0.6.12"
 serde = { version = "1.0.159", features = ["derive"] }
 serde_json = "1.0.95"
-sqlx = { version = "0.6.3", features = ["macros", "migrate", "runtime-tokio-rustls", "sqlite"] }
+sqlx = { version = "0.8", features = [
+    "macros",
+    "migrate",
+    "runtime-tokio-rustls",
+    "sqlite",
+] }
 sqlx-crud = { path = "../..", features = ["runtime-tokio-rustls"] }
 tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
